[package]
name = "chicago"
version = "1.0.0"
authors = ["Jeff Leonard <cardinaljeff@comcast.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deckofcards = {path = 'C:\Users\Jeff\Desktop\CS 4600 DAY AA\Rust\deckofcards-rs-master\deckofcards-rs-master'}